--- a/src/main/resources/ba_at.cfg
+++ b/src/main/resources/ba_at.cfg
@@ -1,8 +1,12 @@
+# cooldown handling
 public net.minecraft.util.CooldownTracker field_185147_a # cooldowns
 public net.minecraft.util.CooldownTracker field_185148_b # ticks
 public net.minecraft.util.CooldownTracker$Cooldown
 public-f net.minecraft.util.CooldownTracker$Cooldown field_185137_a # createTicks
 public-f net.minecraft.util.CooldownTracker$Cooldown field_185138_b # expireTicks
 
+# item name handling
+public net.minecraft.client.gui.GuiIngame field_92017_k # remainingHighlightTicks
 
-public net.minecraft.client.gui.GuiIngame field_92017_k # remaining highlights
+# swing control
+public net.minecraft.entity.EntityLivingBase field_184617_aD # ticksSinceLastSwing
