--- a/src/main/resources/ba_at.cfg
+++ b/src/main/resources/ba_at.cfg
@@ -16,3 +16,6 @@ public net.minecraft.entity.EntityLivingBase field_184617_aD # ticksSinceLastSwi
 public net.minecraft.client.renderer.entity.RenderManager field_78725_b # renderPosX
 public net.minecraft.client.renderer.entity.RenderManager field_78726_c # renderPosY
 public net.minecraft.client.renderer.entity.RenderManager field_78723_d # renderPosZ
+
+# logs
+public-f net.minecraft.block.Block field_176227_L # blockState
