--- a/build.gradle
+++ b/build.gradle
@@ -56,7 +56,7 @@ configurations {
 }
 
 dependencies {
-    deobfCompile "mezz.jei:jei_1.9:3.2.8.182"
+    deobfCompile "mezz.jei:jei_${config.jei_version}"
 
     compile "org.jetbrains.kotlin:kotlin-stdlib:$kotlin_version"
     required "org.jetbrains.kotlin:kotlin-stdlib:$kotlin_version"
