--- a/build.properties
+++ b/build.properties
@@ -1,6 +1,7 @@
 version=1
 build_number=1
 mc_version=1.9
-forge_version=12.16.0.1865-1.9
+forge_version=12.16.1.1901
+jei_version=1.9:3.3.3.197
 mod_name=BotanicalAddons
 mc_mappings=snapshot_20160402
