--- a/build.properties
+++ b/build.properties
@@ -5,3 +5,4 @@ forge_version=12.17.0.1921-1.9.4
 jei_version=1.9.4:3.4.0.202
 mod_name=BotanicalAddons
 mc_mappings=snapshot_20160521
+group=shadowfox.botanicaladdons
