--- a/build.properties
+++ b/build.properties
@@ -1,7 +1,7 @@
 version=1
 build_number=1
 mc_version=1.9.4
-forge_version=12.17.0.1921-1.9.4
+forge_version=12.17.0.1954
 jei_version=1.9.4:3.4.0.202
 mod_name=BotanicalAddons
 mc_mappings=snapshot_20160521
