--- a/build.properties
+++ b/build.properties
@@ -5,6 +5,6 @@ forge_version=12.18.0.2007-1.10.0
 jei_version=1.9.4:3.4.0.202
 mantle_version=1.9.4-0.10.2.jenkins150
 tinkers_version=1.9.4-2.3.2.jenkins260
-mod_name=BotanicalAddons
+mod_name=NaturalPledge
 mc_mappings=snapshot_20160703
 group=shadowfox.botanicaladdons
