--- a/build.properties
+++ b/build.properties
@@ -1,10 +1,10 @@
 version=1
 build_number=3
 mc_version=1.10.2
-forge_version=12.18.0.2007-1.10.0
-jei_version=1.9.4:3.4.0.202
+forge_version=12.18.1.2045
+jei_version=1.10.2:3.7.2.220
 mantle_version=1.9.4-0.10.2.jenkins150
 tinkers_version=1.9.4-2.3.2.jenkins260
 mod_name=NaturalPledge
-mc_mappings=snapshot_20160703
+mc_mappings=snapshot_20160518
 group=shadowfox.botanicaladdons
