--- a/build.gradle
+++ b/build.gradle
@@ -48,6 +48,9 @@ repositories {
     maven {
         url "http://dvs1.progwml6.com/files/maven"
     }
+    maven {
+        url "http://mvn.rx14.co.uk/shadowfacts/"
+    }
 }
 
 configurations {
@@ -59,6 +62,7 @@ configurations {
 dependencies {
     deobfCompile "mezz.jei:jei_${config.jei_version}"
 
+    compile "net.shadowfacts:Forgelin:1.2.0"
     compile "org.jetbrains.kotlin:kotlin-stdlib:$kotlin_version"
     required "org.jetbrains.kotlin:kotlin-stdlib:$kotlin_version"
 }
