--- a/build.properties
+++ b/build.properties
@@ -6,3 +6,4 @@ jei_version=1.11.2:4.2.9.247
 mod_name=NaturalPledge
 mc_mappings=snapshot_20170324
 group=shadowfox.botanicaladdons
+core_plugin=com.teamwizardry.librarianlib.asm.LibLibCorePlugin
