--- a/build.gradle
+++ b/build.gradle
@@ -26,6 +26,7 @@ allprojects {
 
 ext.configFile = file('build.properties')
 ext.config = parseConfig(configFile)
+ext.corePlugin = config.core_plugin
 
 version = "${config.version}.${config.build_number}"
 group = config.group
@@ -36,6 +37,9 @@ minecraft {
     version = "${config.mc_version}-${config.forge_version}"
     runDir = "run"
     mappings = config.mc_mappings
+
+    clientJvmArgs = ["-Dfml.coreMods.load=$corePlugin"]
+    serverJvmArgs = ["-Dfml.coreMods.load=$corePlugin"]
 
     replace 'GRADLE:BUILD', config.build_number
     replace 'GRADLE:VERSION', config.version
