all but chieves

--- a/build.properties
+++ b/build.properties
@@ -1,9 +1,9 @@
 version=2
 build_number=3
-mc_version=1.11.2
-forge_version=13.20.0.2259
-jei_version=1.11.2:4.2.9.247
+mc_version=1.12.1
+forge_version=14.22.1.2480
+jei_version=1.12.1:4.7.8.95
 mod_name=NaturalPledge
-mc_mappings=stable_31
+mc_mappings=snapshot_20170914
 group=shadowfox.botanicaladdons
 core_plugin=com.teamwizardry.librarianlib.asm.LibLibCorePlugin
