--- a/.gitignore
+++ b/.gitignore
@@ -36,6 +36,7 @@ hs_err_pid*
 # .idea/workspace.xml
 # .idea/tasks.xml
 # .idea/dictionaries
+src/main/resources/assets/botanicaladdons/recipes
 
 # Sensitive or high-churn files:
 # .idea/dataSources.ids
