--- a/build.gradle
+++ b/build.gradle
@@ -54,6 +54,9 @@ minecraft {
 
 jar {
     archiveName "${archivesBaseName}-r${version}.jar"
+    manifest {
+        attributes 'FMLAT': 'botania_at.cfg'
+    }
 }
 
 repositories {
@@ -63,6 +66,9 @@ repositories {
     }
     maven {
         url "http://maven.bluexin.be/repository/snapshots/"
+    }
+    maven {
+        url = "http://maven.thiakil.com"
     }
 }
 
@@ -76,6 +82,7 @@ compileKotlin {
 
 dependencies {
     deobfCompile "mezz.jei:jei_${config.jei_version}"
+    deobfCompile "com.azanor.baubles:Baubles:1.12-1.5.2"
     compile "com.teamwizardry.librarianlib:librarianlib-1.12:4.3-SNAPSHOT:deobf"
     compile files("libs/Botania r1.10-352-deobf.jar")
 }
