--- a/build.properties
+++ b/build.properties
@@ -1,9 +1,9 @@
-version=2
-build_number=3
+version=3
+build_number=0
 mc_version=1.12.2
 forge_version=14.23.4.2705
 jei_version=1.12.2:4.11.0.206
 mod_name=NaturalPledge
 mc_mappings=snapshot_20171231
-group=shadowfox.botanicaladdons
+group=com.wiresegal.naturalpledge
 core_plugin=com.teamwizardry.librarianlib.asm.LibLibCorePlugin
