Updated LibLib version and mappings

--- a/build.properties
+++ b/build.properties
@@ -4,6 +4,6 @@ mc_version=1.12.2
 forge_version=14.23.4.2705
 jei_version=1.12.2:4.11.0.206
 mod_name=NaturalPledge
-mc_mappings=snapshot_20171231
+mc_mappings=stable_39
 group=com.wiresegal.naturalpledge
 core_plugin=com.teamwizardry.librarianlib.asm.LibLibCorePlugin
